# ron-assista-bot

./: .eslintrc.json  .gitignore  Cargo.toml  LICENSE  README.md  cache.json  config.example.json  index.js  package-lock.json  package.json
.cargo/: config.toml
policy_system/: db  snap.00000000000004C1
src/: helper.rs  index.js  main.rs
src/commands/: convert_video.rs  discord_info.rs  discord_log.rs  false_infraction.rs  getDiscordLog.js  getRobloxLog.js  get_info.rs  mod.rs  probation_log.rs  restart.js  roblox_log.rs  role_log.rs  timed_role.rs  update.rs
src/commands/embedders/: makeEmbed.js
src/commands/game_module/: mod.rs
src/commands/info/: getinfo.js
src/commands/info_module/: discord_info.rs  get_info.rs  mod.rs
src/commands/log_module/: discord_log.rs  false_infraction.rs  mod.rs  probation_log.rs  roblox_log.rs  role_log.rs
src/commands/media_module/: convert_gif.rs  convert_video.rs  media_effects.rs  mod.rs
src/commands/parsers/: acceptAppeal.js  denyAppeal.js  discordLog.js  getDiscordLog.js  getRobloxLog.js  probationLog.js  robloxLog.js  roleLog.js
src/commands/playground/: auror.rs  mod.rs
src/commands/policy_module/: mod.rs  policy.rs
src/commands/test/: attachmentTest.js
src/commands/time_module/: mod.rs  timed_role.rs
src/commands/utility/: restart.js
src/commands/video_module/: convert_gif.rs  convert_video.rs  mod.rs
src/main_modules/: deleted_attachments.rs  helper.rs  media.rs  mod.rs  policy_updater.rs  timer.rs
src/modules/: helperFunctions.js
