[package]
name = "ron-assista-bot"
version = "2.1.4"
edition = "2021"

[dependencies]
chrono = "0.4.38"
futures = "0.3.30"
indexmap = "2.2.6"
once_cell = "1.19.0"
poise = { version = "0.6.1" }
regex = "1.10.4"
reqwest = { version = "0.12.4" }
roboat = "0.35.0"
serde = "1.0.204"
serde_json = "1.0.120"
serenity = { version = "0.12.1", features = ["rustls_backend"], default-features = false }
static-toml = "1.2.0"
tokio = "1.37.0"
# video-rs = "0.8.1"

[profile.release]
lto = true