cargo-features = ["edition2024"]

[package]
name = "ron-assista-bot"
version = "3.0.0"
edition = "2024"

[dependencies]
bincode = "1.3.3"
chrono = "0.4.38"
futures = "0.3.31"
image = "0.25.3"
indexmap = "2.6.0"
once_cell = "1.20.2"
poise = { version = "0.6.1" }
rayon = "1.10.0"
regex = "1.11.0"
reqwest = { version = "0.12.8" }
roboat = "0.35.0"
serde = "1.0.210"
serde_json = "1.0.128"
serenity = { version = "0.12.2", features = ["rustls_backend"], default-features = false }
similar = "2.6.0"
sled = "0.34.7"
static-toml = "1.2.0"
tempfile = "3.13.0"
tokio = "1.40.0"
uuid = "1.11.0"

[profile.release]
lto = true
